basic.tf
#Providers Block
terraform {
  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "2.83.0"
    }
  }
}

provider "azurerm" {
  # Configuration options
  features {}
}

#Resource Group creation
resource "azurerm_resource_group" "basicrg" {
  name     = "${var.prefix}-basic-rg"
  location = "East US"
}

#Virtual Network and Subnet creation
resource "azurerm_virtual_network" "basicvnet" {
  name                = "${var.prefix}-virtualNetwork1"
  location            = azurerm_resource_group.basicrg.location
  resource_group_name = azurerm_resource_group.basicrg.name
  address_space       = ["10.20.0.0/16"]

}

#Bastion subnet creation
resource "azurerm_subnet" "bastion" {
  name                 = "${var.prefix}-bastion"
  resource_group_name  = azurerm_resource_group.basicrg.name
  virtual_network_name = azurerm_virtual_network.basicvnet.name
  address_prefixes     = ["10.20.1.0/24"]
}

#web subnet creation
resource "azurerm_subnet" "web" {
  name                 = "${var.prefix}-web"
  resource_group_name  = azurerm_resource_group.basicrg.name
  virtual_network_name = azurerm_virtual_network.basicvnet.name
  address_prefixes     = ["10.20.2.0/24"]
}

#app subnet creation
resource "azurerm_subnet" "app" {
  name                 = "${var.prefix}-app"
  resource_group_name  = azurerm_resource_group.basicrg.name
  virtual_network_name = azurerm_virtual_network.basicvnet.name
  address_prefixes     = ["10.20.3.0/24"]
}

#db subnet creation
resource "azurerm_subnet" "db" {
  name                 = "${var.prefix}-db"
  resource_group_name  = azurerm_resource_group.basicrg.name
  virtual_network_name = azurerm_virtual_network.basicvnet.name
  address_prefixes     = ["10.20.4.0/24"]
}

#Bastion NSG creation
resource "azurerm_network_security_group" "bastion-nsg" {
  name                = "${var.prefix}-bastion-nsg"
  location            = azurerm_resource_group.basicrg.location
  resource_group_name = azurerm_resource_group.basicrg.name

  security_rule {
    name                       = "RDP_Port_Home"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "13.71.66.201"
    destination_address_prefix = "*"
  }
}

#Web NSG creation
resource "azurerm_network_security_group" "web-nsg" {
  name                = "${var.prefix}-web-nsg"
  location            = azurerm_resource_group.basicrg.location
  resource_group_name = azurerm_resource_group.basicrg.name

}

#App NSG creation
resource "azurerm_network_security_group" "app-nsg" {
  name                = "${var.prefix}-app-nsg"
  location            = azurerm_resource_group.basicrg.location
  resource_group_name = azurerm_resource_group.basicrg.name
}

#Db NSG creation
resource "azurerm_network_security_group" "db-nsg" {
  name                = "${var.prefix}-db-nsg"
  location            = azurerm_resource_group.basicrg.location
  resource_group_name = azurerm_resource_group.basicrg.name

  security_rule {
    name                       = "SSH_Port_Home"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "13.71.66.201"
    destination_address_prefix = "*"
  }
}

#resource "azurerm_subnet_network_security_group_association" "bastion-nsg-association" {
#  subnet_id                 = azurerm_subnet.bastion.id
# network_security_group_id = azurerm_network_security_group.bastion-nsg.id
#}

resource "azurerm_subnet_network_security_group_association" "web-nsg-association" {
  subnet_id                 = azurerm_subnet.web.id
  network_security_group_id = azurerm_network_security_group.web-nsg.id
}

resource "azurerm_subnet_network_security_group_association" "app-nsg-association" {
  subnet_id                 = azurerm_subnet.app.id
  network_security_group_id = azurerm_network_security_group.app-nsg.id
}

resource "azurerm_subnet_network_security_group_association" "db-nsg-association" {
  subnet_id                 = azurerm_subnet.db.id
  network_security_group_id = azurerm_network_security_group.db-nsg.id
}

resource "azurerm_public_ip" "bastion-pip" {
  name                = "${var.prefix}-bastion-pip"
  resource_group_name = azurerm_resource_group.basicrg.name
  location            = azurerm_resource_group.basicrg.location
  allocation_method   = "Dynamic"
  tags                = var.tags
}

resource "azurerm_network_interface" "bastionnic" {
  name                = "${var.prefix}-bastion-nic"
  location            = azurerm_resource_group.basicrg.location
  resource_group_name = azurerm_resource_group.basicrg.name

  ip_configuration {
    name                          = "testconfiguration1"
    subnet_id                     = azurerm_subnet.bastion.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.bastion-pip.id
  }
}

resource "azurerm_virtual_machine" "bastion-vm" {
  name                  = "bastion-vm"
  location              = azurerm_resource_group.basicrg.location
  resource_group_name   = azurerm_resource_group.basicrg.name
  network_interface_ids = [azurerm_network_interface.bastionnic.id]
  vm_size               = var.vm_size

  # Uncomment this line to delete the OS disk automatically when deleting the VM
  # delete_os_disk_on_termination = true

  # Uncomment this line to delete the data disks automatically when deleting the VM
  # delete_data_disks_on_termination = true

  storage_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2019-Datacenter"
    version   = "latest"
  }
  storage_os_disk {
    name              = "bastionosdisk"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }
  os_profile {
    computer_name  = "bastion-vm"
    admin_username = "azureuser"
    admin_password = "Passw0rd@123"
  }

}
